@@ -196,6 +196,8 @@ MeetMe Changes
      This extends the concise capabilities of this CLI command to include
      listing all conferences, instead of an addition to the other sub commands
      for the "meetme" command.
+  * Added the ability to specify the music on hold class used to play into the
+     conference when there is only one member and the M option is used.
 
 Music On Hold Changes
 ---------------------
@@ -324,3 +326,5 @@ Miscellaneous
     you to use Nortel i2002, i2004, and i2050 phones with Asterisk.
  * Enhanced "agi debug" to print the channel name as a prefix to the debug
     output to make debugging on busy systems much easier.
+  * Added the ability to specify a music on hold class to play instead of ringing
+     for the SLATrunk application.
